--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,11 @@
 {
-    "github": {
-        "silent": true
-    },
-    "buildCommand": "npm run build",
+    "framework": "vite",
+    "buildCommand": "vite build",
     "outputDirectory": "dist",
-    "framework": "vite"
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
