--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "dev": "cd client && npm run dev",
         "server": "cd server && npm start",
+        "build": "cd client && npm install && npm run build",
         "install-all": "cd client && npm install && cd ../server && npm install"
     }
 }
