--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.13.0",
         "socket.io-client": "^4.7.2",
         "uuid": "^9.0.1"
     },
