--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.95.3",
         "lucide-react": "^0.564.0",
+        "peerjs": "^1.5.5",
         "phaser": "^3.80.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
