Security, Controls, Wave System & Deployment Updates

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "name": "multiplayer-td-root",
     "version": "1.0.0",
     "scripts": {
+        "start": "cd server && npm start",
         "dev": "cd client && npm run dev",
         "server": "cd server && npm start",
         "build": "cd client && npm install && npm run build",
-        "install-all": "cd client && npm install && cd ../server && npm install"
+        "install-all": "cd client && npm install && cd ../server && npm install",
+        "postinstall": "npm run install-all"
     }
 }
