--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,10 @@
         "dev": "nodemon index.js"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.95.3",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
         "socket.io": "^4.7.2",
-        "cors": "^2.8.5",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
