--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.95.3",
         "cors": "^2.8.5",
+        "dotenv": "^17.3.1",
         "express": "^4.18.2",
         "socket.io": "^4.7.2",
         "uuid": "^9.0.1"
